--- a/WeatherApp/Base.lproj/LaunchScreen.storyboard
+++ b/WeatherApp/Base.lproj/LaunchScreen.storyboard
@@ -24,14 +24,20 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Developed by: Steve &amp; Derrick" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tM0-n3-QeF">
-                                <rect key="frame" x="192" y="547" width="216.5" height="20.5"/>
+                                <rect key="frame" x="192" y="547" width="217" height="21"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Midterm Project: WeatherApp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cPX-d4-Y9s">
-                                <rect key="frame" x="196" y="519" width="209" height="20.5"/>
+                                <rect key="frame" x="196" y="519" width="209" height="21"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-ThinItalic" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather N Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zwO-If-tuv">
+                                <rect key="frame" x="230" y="20" width="140" height="21"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -40,10 +46,12 @@
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="hcK-k0-Bri" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Jyh-Xq-bgS"/>
+                            <constraint firstItem="zwO-If-tuv" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="O1q-8r-zOW"/>
                             <constraint firstItem="cPX-d4-Y9s" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="RmJ-6f-a5N"/>
                             <constraint firstItem="tM0-n3-QeF" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="d1v-Nd-Men"/>
                             <constraint firstItem="hcK-k0-Bri" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fnR-VR-H0q"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="tM0-n3-QeF" secondAttribute="bottom" constant="32" id="gum-ui-a2J"/>
+                            <constraint firstItem="zwO-If-tuv" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="liT-it-DQG"/>
                             <constraint firstItem="tM0-n3-QeF" firstAttribute="top" secondItem="cPX-d4-Y9s" secondAttribute="bottom" constant="8" id="sYv-yg-zTd"/>
                         </constraints>
                     </view>
